--- a/FileBox/FileBox.csproj
+++ b/FileBox/FileBox.csproj
@@ -9,6 +9,9 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\FileBox.Shared\Filebox.Shared.csproj" />
+		<!--You need to change this to the correct location of the database connector-->
+		<!--TODO - Change this to a package reference after DatabaseConnector has been finished-->
+		<ProjectReference Include="D:\2025\Coding\DatabaseConnector\DatabaseConnector\DatabaseConnector.csproj"/>
 	</ItemGroup>
 
 </Project>
