--- a/FileBox/FileBox.csproj
+++ b/FileBox/FileBox.csproj
@@ -11,7 +11,16 @@
 		<ProjectReference Include="..\FileBox.Shared\Filebox.Shared.csproj" />
 		<!--You need to change this to the correct location of the database connector-->
 		<!--TODO - Change this to a package reference after DatabaseConnector has been finished-->
-		<ProjectReference Include="D:\2025\Coding\DatabaseConnector\DatabaseConnector\DatabaseConnector.csproj"/>
+		<ProjectReference Include="D:\2025\Coding\DatabaseConnector\DatabaseConnector\DatabaseConnector.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="filelocationsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
