Added classes for data retrival.
Made on startup when the database is SQLITE the tables are created if they already aren't.

--- a/FileBox/FileBox.csproj
+++ b/FileBox/FileBox.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\FileBox.Shared\Filebox.Shared.csproj" />
+		<ProjectReference Include="..\FileBox.Shared\FileBox.Shared.csproj" />
 		<!--You need to change this to the correct location of the database connector-->
 		<!--TODO - Change this to a package reference after DatabaseConnector has been finished-->
 		<ProjectReference Include="D:\2025\Coding\DatabaseConnector\DatabaseConnector\DatabaseConnector.csproj" />
@@ -19,6 +19,9 @@
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	  <None Update="filelocationsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="tablesconfig.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
