Removed DatabaseConnector as Project Reference and made it a dll reference. Current version of DatabaseConnector is v1.0.0.

--- a/FileBox.Shared/Filebox.Shared.csproj
+++ b/FileBox.Shared/Filebox.Shared.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 	<ItemGroup>
-		<!--You need to change this to the correct location of the database connector-->
-		<!--TODO - Change this to a package reference after DatabaseConnector has been finished-->
-		<ProjectReference Include="D:\2025\Coding\DatabaseConnector\DatabaseConnector\DatabaseConnector.csproj"/>
+		<Reference Include="DatabaseConnector">
+			<HintPath>..\DLLs\DatabaseConnector.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 
 </Project>
