FileBox Made location of sqlite database be passed into startup Added NoOfFiles for Tags
Filebox.Shared
Added Clone to tag model

FileBoxApp
Added Tag Page
Added Modal Component

--- a/FileBoxApp/FileBoxApp.csproj
+++ b/FileBoxApp/FileBoxApp.csproj
@@ -75,10 +75,11 @@
       <ProjectReference Include="..\FileBox\FileBox.csproj" />
     </ItemGroup>
 
-	<ItemGroup>
-		<Reference Include="DatabaseConnector">
-			<HintPath>..\DLLs\DatabaseConnector.dll</HintPath>
-		</Reference>
-	</ItemGroup>
+    <ItemGroup>
+      <Reference Include="DatabaseConnector">
+        <HintPath>..\DLLs\DatabaseConnector.dll</HintPath>
+		  <Private>True</Private>
+      </Reference>
+    </ItemGroup>
 
 </Project>
