--- a/FileBox/FileBox.csproj
+++ b/FileBox/FileBox.csproj
@@ -5,7 +5,6 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -13,9 +12,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="DatabaseConnector">
-			<HintPath>..\DLLs\DatabaseConnector.dll</HintPath>
-		</Reference>
+	  <Reference Include="DatabaseConnector">
+	    <HintPath>..\DLLs\DatabaseConnector.dll</HintPath>
+	    <Private>True</Private>
+	  </Reference>
 	</ItemGroup>
 
 	<ItemGroup>
