--- a/FileBoxApp/FileBoxApp.csproj
+++ b/FileBoxApp/FileBoxApp.csproj
@@ -67,6 +67,7 @@
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.50" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.50" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.3" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
         <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
     </ItemGroup>
 
