--- a/FileBoxApp/FileBoxApp.csproj
+++ b/FileBoxApp/FileBoxApp.csproj
@@ -62,6 +62,7 @@
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="CommunityToolkit.Maui" Version="11.2.0" />
+        <PackageReference Include="MetadataExtractor" Version="2.8.1" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
         <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.50" />
