--- a/FileBoxWebApp/FileBoxWebApp/appsettings.json
+++ b/FileBoxWebApp/FileBoxWebApp/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:4300"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "DatabaseType": "MySql",
