Added ability to look through folders and upload to them.
Fixed issue with upload Ids not being set right and corrupting other uploads. Changed storage of files to upload to IndexedDB instead of RAM.

--- a/FileBoxWebApp/FileBoxWebApp.Client/FileBoxWebApp.Client.csproj
+++ b/FileBoxWebApp/FileBoxWebApp.Client/FileBoxWebApp.Client.csproj
@@ -16,5 +16,16 @@
       <ProjectReference Include="..\..\FileBox.Shared\FileBox.Shared.csproj" />
       <ProjectReference Include="..\..\FileBox\FileBox.csproj" />
     </ItemGroup>
+	
+	<ItemGroup>
+      <Reference Include="DatabaseConnector">
+        <HintPath>..\..\DLLs\DatabaseConnector.dll</HintPath>
+		<Private>True</Private>
+      </Reference>
+    </ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Models\" />
+	</ItemGroup>
 
 </Project>
