--- a/FileBoxWebApp/FileBoxWebApp/appsettings.json
+++ b/FileBoxWebApp/FileBoxWebApp/appsettings.json
@@ -15,6 +15,6 @@
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "DatabaseType": "MySql",
-    "ConnectionString": "server=192.168.1.193;uid=FileBoxAdmin;pwd=FileBoxPassword;database=FileBox"
+    "ConnectionString": "server=192.168.1.193;uid=FileBoxAdmin;pwd=FileBoxPassword;database=FileBoxTest"
   }
 }
